src/objects/OrderApi__Known_Address__c.object
<CustomObject>
    <description>Known Addresses allows Contacts and Accounts to have multiple related address records.</description>
    <fields>
        <fullName>OrderApi__Additional_Details__c</fullName>
        <description>Any additional information about the Address (Buzz number, gate code, etc.)</description>
        <inlineHelpText>Any additional information about the Address (Buzz number, gate code, etc.)</inlineHelpText>
        <label>Additional Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__City__c</fullName>
        <description>Address City</description>
        <inlineHelpText>Address City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the known address to a contact.</description>
        <inlineHelpText>Relates the known address to a contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Known Addresses</relationshipLabel>
        <relationshipName>Known_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Country__c</fullName>
        <description>Address Country</description>
        <inlineHelpText>Address Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this will be the pre-populated address when a user is checking out. Only one address
            can be checked for a contact at any given time.</description>
        <inlineHelpText>When checked, this will be the pre-populated address when a user is checking out. Only one
            address can be checked for a contact at any given time.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Name__c</fullName>
        <description>Name used as reference for this address.</description>
        <inlineHelpText>Name used as reference for this address.</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Postal_Code__c</fullName>
        <description>Address Zip/Postal Code</description>
        <inlineHelpText>Address Zip/Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Province__c</fullName>
        <description>Address State</description>
        <inlineHelpText>Address State</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Street__c</fullName>
        <description>Address Street</description>
        <inlineHelpText>Address Street</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Known Address</label>
    <nameField>
        <displayFormat>KA-{000000000}</displayFormat>
        <label>Known Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>